src/Compiler/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from src/Compiler/Parser/Parser.y
-----------------------------------------------------------------------------

state 8 contains 17 shift/reduce conflicts.
state 33 contains 4 shift/reduce conflicts.
state 52 contains 1 shift/reduce conflicts.
state 53 contains 1 shift/reduce conflicts.
state 57 contains 4 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 58 contains 4 shift/reduce conflicts.
state 64 contains 1 shift/reduce conflicts.
state 65 contains 1 shift/reduce conflicts.
state 77 contains 14 shift/reduce conflicts.
state 86 contains 14 shift/reduce conflicts.
state 108 contains 1 shift/reduce conflicts.
state 109 contains 4 shift/reduce conflicts.
state 176 contains 4 shift/reduce conflicts.

terminal match is unused
terminal with is unused
terminal type is unused
terminal '_' is unused
terminal the is unused
terminal claim is unused
terminal define is unused
terminal elim is unused
terminal assume is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parserMain -> Program                       (0)
	%start_parserType -> Type                          (1)
	Program -> Exp                                     (2)
	Program -> Declarations                            (3)
	Declarations -> Layout__Declaration__              (4)
	Declaration -> Decl                                (5)
	Declaration -> Data                                (6)
	Data -> data UpIdent Params Constructors           (7)
	Constructors ->                                    (8)
	Constructors -> '=' Constr NoneOrMany__ConstrOther__   (9)
	ConName -> OpCon                                   (10)
	ConName -> '`' Con '`'                             (11)
	Constr -> UpIdent NoneOrMany__TyAppRight__         (12)
	Constr -> Type ConName OneOrMany__Type__           (13)
	ConstrOther -> '|' Constr                          (14)
	Params -> NoneOrMany__Var__                        (15)
	LowIdent -> Var                                    (16)
	LowIdent -> '(' Op ')'                             (17)
	UpIdent -> Con                                     (18)
	UpIdent -> '(' opcon ')'                           (19)
	UpIdent -> unit                                    (20)
	Var -> varid                                       (21)
	Con -> conid                                       (22)
	Op -> op                                           (23)
	OpCon -> opcon                                     (24)
	Oper -> op                                         (25)
	Oper -> opcon                                      (26)
	Exp -> AppLeft                                     (27)
	Exp -> Application                                 (28)
	Exp -> '(' Exp ')'                                 (29)
	Application -> AppLeft OneOrMany__AppRight__       (30)
	Application -> AppLeft '`' Var '`' OneOrMany__AppRight__   (31)
	Application -> AppLeft '`' Con '`' OneOrMany__AppRight__   (32)
	Application -> AppLeft Oper OneOrMany__AppRight__   (33)
	AppLeft -> LowIdent                                (34)
	AppLeft -> Con                                     (35)
	AppLeft -> '(' opcon ')'                           (36)
	AppLeft -> symid                                   (37)
	AppLeft -> Lit                                     (38)
	AppLeft -> lambda Params '->' Exp                  (39)
	AppLeft -> '(' AppLeft ')'                         (40)
	AppLeft -> fix Exp                                 (41)
	AppLeft -> if Exp then Exp else Exp                (42)
	AppLeft -> let Layout__Binding__ in Exp            (43)
	AppLeft -> letrec LowIdent Params '=' Exp in Exp   (44)
	AppLeft -> '(' Exp CommaSeparated__Exp__ ')'       (45)
	AppLeft -> '[' NoneOrManySeparated__Exp__ ']'      (46)
	AppLeft -> '(' Application ')'                     (47)
	AppLeft -> '(' Exp '::' Type ')'                   (48)
	AppRight -> AppLeft                                (49)
	Binding -> LowIdent Params '=' Exp                 (50)
	Binding -> Var Op Params '=' Exp                   (51)
	Binding -> Var '`' Var '`' Params '=' Exp          (52)
	Binding -> rec LowIdent Params '=' Exp             (53)
	Binding -> rec Var Op Params '=' Exp               (54)
	Binding -> rec Var '`' Var '`' Params '=' Exp      (55)
	GlobalBinding -> LowIdent Params '=' Exp           (56)
	GlobalBinding -> Var Op Params '=' Exp             (57)
	GlobalBinding -> Var '`' Var '`' Params '=' Exp    (58)
	Decl -> GlobalBinding                              (59)
	Decl -> Annotation Binding                         (60)
	Lit -> Integer                                     (61)
	Lit -> Double                                      (62)
	Lit -> char                                        (63)
	Lit -> string                                      (64)
	Integer -> integer                                 (65)
	Double -> double                                   (66)
	Annotation -> LowIdent '::' Type                   (67)
	Type -> TyAppLeft                                  (68)
	Type -> TyApp                                      (69)
	Type -> '(' Type ')'                               (70)
	TyArr -> Type '->' Type                            (71)
	TyTuple -> '(' Type CommaSeparated__Type__ ')'     (72)
	TyApp -> TyAppLeft OneOrMany__TyAppRight__         (73)
	TyAppLeft -> LowIdent                              (74)
	TyAppLeft -> UpIdent                               (75)
	TyAppLeft -> TyArr                                 (76)
	TyAppLeft -> TyTuple                               (77)
	TyAppLeft -> '(' TyApp ')'                         (78)
	TyAppLeft -> '(' TyAppLeft ')'                     (79)
	TyAppRight -> TyAppLeft                            (80)
	CommaSeparated__Exp__ -> ',' Exp                   (81)
	CommaSeparated__Exp__ -> ',' Exp CommaSeparated__Exp__   (82)
	CommaSeparated__Type__ -> ',' Type                 (83)
	CommaSeparated__Type__ -> ',' Type CommaSeparated__Type__   (84)
	Layout__Binding__ -> '{' LayoutInside__Binding__   (85)
	Layout__Declaration__ -> '{' LayoutInside__Declaration__   (86)
	NoneOrMany__ConstrOther__ ->                       (87)
	NoneOrMany__ConstrOther__ -> ConstrOther NoneOrMany__ConstrOther__   (88)
	NoneOrMany__TyAppRight__ ->                        (89)
	NoneOrMany__TyAppRight__ -> TyAppRight NoneOrMany__TyAppRight__   (90)
	NoneOrMany__Var__ ->                               (91)
	NoneOrMany__Var__ -> Var NoneOrMany__Var__         (92)
	NoneOrManySeparated__Exp__ ->                      (93)
	NoneOrManySeparated__Exp__ -> Exp                  (94)
	NoneOrManySeparated__Exp__ -> Exp ',' NoneOrManySeparated__Exp__   (95)
	OneOrMany__AppRight__ -> AppRight NoneOrMany__AppRight__   (96)
	OneOrMany__TyAppRight__ -> TyAppRight NoneOrMany__TyAppRight__   (97)
	OneOrMany__Type__ -> Type NoneOrMany__Type__       (98)
	LayoutInside__Binding__ -> Binding '}'             (99)
	LayoutInside__Binding__ -> Binding ';' LayoutInside__Binding__   (100)
	LayoutInside__Declaration__ -> Declaration '}'     (101)
	LayoutInside__Declaration__ -> Declaration ';' LayoutInside__Declaration__   (102)
	NoneOrMany__AppRight__ ->                          (103)
	NoneOrMany__AppRight__ -> AppRight NoneOrMany__AppRight__   (104)
	NoneOrMany__Type__ ->                              (105)
	NoneOrMany__Type__ -> Type NoneOrMany__Type__      (106)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	match          { TokMatch }
	with           { TokWith }
	data           { TokData }
	if             { TokIf }
	then           { TokThen }
	else           { TokElse }
	let            { TokLet }
	in             { TokIn }
	type           { TokType }
	'_'            { TokHole }
	the            { TokThe }
	claim          { TokClaim }
	define         { TokDefine }
	lambda         { TokLambda }
	fix            { TokFix }
	letrec         { TokLetrec }
	'->'           { TokOperator "->" }
	'='            { TokOperator "=" }
	'|'            { TokOperator "|" }
	'::'           { TokOperator "::" }
	varid          { TokVarLower $$ }
	conid          { TokVarUpper $$ }
	op             { TokOperator $$ }
	opcon          { TokOpConstr $$ }
	symid          { TokNativeSym $$ }
	elim           { TokEliminator $$ }
	'('            { TokLeftParen }
	')'            { TokRightParen }
	'['            { TokLeftBracket }
	']'            { TokRightBracket }
	','            { TokComma }
	'`'            { TokBackTick }
	'{'            { TokLeftBrace }
	'}'            { TokRightBrace }
	';'            { TokSemicolon }
	unit           { TokVarUpper "()" }
	integer        { TokInt $$ }
	char           { TokChar $$ }
	double         { TokDouble $$ }
	string         { TokString $$ }
	assume         { TokAssume }
	rec            { TokRec }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parserMain rule  0
	%start_parserType rule  1
	Program         rules 2, 3
	Declarations    rule  4
	Declaration     rules 5, 6
	Data            rule  7
	Constructors    rules 8, 9
	ConName         rules 10, 11
	Constr          rules 12, 13
	ConstrOther     rule  14
	Params          rule  15
	LowIdent        rules 16, 17
	UpIdent         rules 18, 19, 20
	Var             rule  21
	Con             rule  22
	Op              rule  23
	OpCon           rule  24
	Oper            rules 25, 26
	Exp             rules 27, 28, 29
	Application     rules 30, 31, 32, 33
	AppLeft         rules 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48
	AppRight        rule  49
	Binding         rules 50, 51, 52, 53, 54, 55
	GlobalBinding   rules 56, 57, 58
	Decl            rules 59, 60
	Lit             rules 61, 62, 63, 64
	Integer         rule  65
	Double          rule  66
	Annotation      rule  67
	Type            rules 68, 69, 70
	TyArr           rule  71
	TyTuple         rule  72
	TyApp           rule  73
	TyAppLeft       rules 74, 75, 76, 77, 78, 79
	TyAppRight      rule  80
	CommaSeparated__Exp__ rules 81, 82
	CommaSeparated__Type__ rules 83, 84
	Layout__Binding__ rule  85
	Layout__Declaration__ rule  86
	NoneOrMany__ConstrOther__ rules 87, 88
	NoneOrMany__TyAppRight__ rules 89, 90
	NoneOrMany__Var__ rules 91, 92
	NoneOrManySeparated__Exp__ rules 93, 94, 95
	OneOrMany__AppRight__ rule  96
	OneOrMany__TyAppRight__ rule  97
	OneOrMany__Type__ rule  98
	LayoutInside__Binding__ rules 99, 100
	LayoutInside__Declaration__ rules 101, 102
	NoneOrMany__AppRight__ rules 103, 104
	NoneOrMany__Type__ rules 105, 106

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parserMain -> . Program                      (rule 0)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	fix            shift, and enter state 15
	letrec         shift, and enter state 16
	varid          shift, and enter state 17
	conid          shift, and enter state 18
	symid          shift, and enter state 19
	'('            shift, and enter state 20
	'['            shift, and enter state 21
	'{'            shift, and enter state 39
	integer        shift, and enter state 22
	char           shift, and enter state 23
	double         shift, and enter state 24
	string         shift, and enter state 25

	Program        goto state 36
	Declarations   goto state 37
	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Exp            goto state 6
	Application    goto state 7
	AppLeft        goto state 8
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11
	Layout__Declaration__goto state 38

State 1

	%start_parserType -> . Type                         (rule 1)

	varid          shift, and enter state 17
	conid          shift, and enter state 18
	'('            shift, and enter state 34
	unit           shift, and enter state 35

	LowIdent       goto state 26
	UpIdent        goto state 27
	Var            goto state 4
	Con            goto state 28
	Type           goto state 29
	TyArr          goto state 30
	TyTuple        goto state 31
	TyApp          goto state 32
	TyAppLeft      goto state 33

State 2

	Program -> . Exp                                    (rule 2)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	fix            shift, and enter state 15
	letrec         shift, and enter state 16
	varid          shift, and enter state 17
	conid          shift, and enter state 18
	symid          shift, and enter state 19
	'('            shift, and enter state 20
	'['            shift, and enter state 21
	integer        shift, and enter state 22
	char           shift, and enter state 23
	double         shift, and enter state 24
	string         shift, and enter state 25

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Exp            goto state 6
	Application    goto state 7
	AppLeft        goto state 8
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11

State 3

	AppLeft -> LowIdent .                               (rule 34)

	if             reduce using rule 34
	then           reduce using rule 34
	else           reduce using rule 34
	let            reduce using rule 34
	in             reduce using rule 34
	lambda         reduce using rule 34
	fix            reduce using rule 34
	letrec         reduce using rule 34
	'::'           reduce using rule 34
	varid          reduce using rule 34
	conid          reduce using rule 34
	op             reduce using rule 34
	opcon          reduce using rule 34
	symid          reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'['            reduce using rule 34
	']'            reduce using rule 34
	','            reduce using rule 34
	'`'            reduce using rule 34
	'}'            reduce using rule 34
	';'            reduce using rule 34
	integer        reduce using rule 34
	char           reduce using rule 34
	double         reduce using rule 34
	string         reduce using rule 34
	%eof           reduce using rule 34


State 4

	LowIdent -> Var .                                   (rule 16)

	if             reduce using rule 16
	then           reduce using rule 16
	else           reduce using rule 16
	let            reduce using rule 16
	in             reduce using rule 16
	lambda         reduce using rule 16
	fix            reduce using rule 16
	letrec         reduce using rule 16
	'->'           reduce using rule 16
	'='            reduce using rule 16
	'|'            reduce using rule 16
	'::'           reduce using rule 16
	varid          reduce using rule 16
	conid          reduce using rule 16
	op             reduce using rule 16
	opcon          reduce using rule 16
	symid          reduce using rule 16
	'('            reduce using rule 16
	')'            reduce using rule 16
	'['            reduce using rule 16
	']'            reduce using rule 16
	','            reduce using rule 16
	'`'            reduce using rule 16
	'}'            reduce using rule 16
	';'            reduce using rule 16
	unit           reduce using rule 16
	integer        reduce using rule 16
	char           reduce using rule 16
	double         reduce using rule 16
	string         reduce using rule 16
	rec            reduce using rule 16
	%eof           reduce using rule 16


State 5

	AppLeft -> Con .                                    (rule 35)

	if             reduce using rule 35
	then           reduce using rule 35
	else           reduce using rule 35
	let            reduce using rule 35
	in             reduce using rule 35
	lambda         reduce using rule 35
	fix            reduce using rule 35
	letrec         reduce using rule 35
	'::'           reduce using rule 35
	varid          reduce using rule 35
	conid          reduce using rule 35
	op             reduce using rule 35
	opcon          reduce using rule 35
	symid          reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'['            reduce using rule 35
	']'            reduce using rule 35
	','            reduce using rule 35
	'`'            reduce using rule 35
	'}'            reduce using rule 35
	';'            reduce using rule 35
	integer        reduce using rule 35
	char           reduce using rule 35
	double         reduce using rule 35
	string         reduce using rule 35
	%eof           reduce using rule 35


State 6

	Program -> Exp .                                    (rule 2)

	%eof           reduce using rule 2


State 7

	Exp -> Application .                                (rule 28)

	if             reduce using rule 28
	then           reduce using rule 28
	else           reduce using rule 28
	let            reduce using rule 28
	in             reduce using rule 28
	lambda         reduce using rule 28
	fix            reduce using rule 28
	letrec         reduce using rule 28
	'::'           reduce using rule 28
	varid          reduce using rule 28
	conid          reduce using rule 28
	op             reduce using rule 28
	opcon          reduce using rule 28
	symid          reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	'['            reduce using rule 28
	']'            reduce using rule 28
	','            reduce using rule 28
	'`'            reduce using rule 28
	'}'            reduce using rule 28
	';'            reduce using rule 28
	integer        reduce using rule 28
	char           reduce using rule 28
	double         reduce using rule 28
	string         reduce using rule 28
	%eof           reduce using rule 28


State 8

	Exp -> AppLeft .                                    (rule 27)
	Application -> AppLeft . OneOrMany__AppRight__      (rule 30)
	Application -> AppLeft . '`' Var '`' OneOrMany__AppRight__    (rule 31)
	Application -> AppLeft . '`' Con '`' OneOrMany__AppRight__    (rule 32)
	Application -> AppLeft . Oper OneOrMany__AppRight__    (rule 33)

	if             shift, and enter state 12
			(reduce using rule 27)

	then           reduce using rule 27
	else           reduce using rule 27
	let            shift, and enter state 13
			(reduce using rule 27)

	in             reduce using rule 27
	lambda         shift, and enter state 14
			(reduce using rule 27)

	fix            shift, and enter state 15
			(reduce using rule 27)

	letrec         shift, and enter state 16
			(reduce using rule 27)

	'::'           reduce using rule 27
	varid          shift, and enter state 17
			(reduce using rule 27)

	conid          shift, and enter state 18
			(reduce using rule 27)

	op             shift, and enter state 79
			(reduce using rule 27)

	opcon          shift, and enter state 80
			(reduce using rule 27)

	symid          shift, and enter state 19
			(reduce using rule 27)

	'('            shift, and enter state 81
			(reduce using rule 27)

	')'            reduce using rule 27
	'['            shift, and enter state 21
			(reduce using rule 27)

	']'            reduce using rule 27
	','            reduce using rule 27
	'`'            shift, and enter state 82
			(reduce using rule 27)

	'}'            reduce using rule 27
	';'            reduce using rule 27
	integer        shift, and enter state 22
			(reduce using rule 27)

	char           shift, and enter state 23
			(reduce using rule 27)

	double         shift, and enter state 24
			(reduce using rule 27)

	string         shift, and enter state 25
			(reduce using rule 27)

	%eof           reduce using rule 27

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Oper           goto state 75
	AppLeft        goto state 76
	AppRight       goto state 77
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11
	OneOrMany__AppRight__goto state 78

State 9

	AppLeft -> Lit .                                    (rule 38)

	if             reduce using rule 38
	then           reduce using rule 38
	else           reduce using rule 38
	let            reduce using rule 38
	in             reduce using rule 38
	lambda         reduce using rule 38
	fix            reduce using rule 38
	letrec         reduce using rule 38
	'::'           reduce using rule 38
	varid          reduce using rule 38
	conid          reduce using rule 38
	op             reduce using rule 38
	opcon          reduce using rule 38
	symid          reduce using rule 38
	'('            reduce using rule 38
	')'            reduce using rule 38
	'['            reduce using rule 38
	']'            reduce using rule 38
	','            reduce using rule 38
	'`'            reduce using rule 38
	'}'            reduce using rule 38
	';'            reduce using rule 38
	integer        reduce using rule 38
	char           reduce using rule 38
	double         reduce using rule 38
	string         reduce using rule 38
	%eof           reduce using rule 38


State 10

	Lit -> Integer .                                    (rule 61)

	if             reduce using rule 61
	then           reduce using rule 61
	else           reduce using rule 61
	let            reduce using rule 61
	in             reduce using rule 61
	lambda         reduce using rule 61
	fix            reduce using rule 61
	letrec         reduce using rule 61
	'::'           reduce using rule 61
	varid          reduce using rule 61
	conid          reduce using rule 61
	op             reduce using rule 61
	opcon          reduce using rule 61
	symid          reduce using rule 61
	'('            reduce using rule 61
	')'            reduce using rule 61
	'['            reduce using rule 61
	']'            reduce using rule 61
	','            reduce using rule 61
	'`'            reduce using rule 61
	'}'            reduce using rule 61
	';'            reduce using rule 61
	integer        reduce using rule 61
	char           reduce using rule 61
	double         reduce using rule 61
	string         reduce using rule 61
	%eof           reduce using rule 61


State 11

	Lit -> Double .                                     (rule 62)

	if             reduce using rule 62
	then           reduce using rule 62
	else           reduce using rule 62
	let            reduce using rule 62
	in             reduce using rule 62
	lambda         reduce using rule 62
	fix            reduce using rule 62
	letrec         reduce using rule 62
	'::'           reduce using rule 62
	varid          reduce using rule 62
	conid          reduce using rule 62
	op             reduce using rule 62
	opcon          reduce using rule 62
	symid          reduce using rule 62
	'('            reduce using rule 62
	')'            reduce using rule 62
	'['            reduce using rule 62
	']'            reduce using rule 62
	','            reduce using rule 62
	'`'            reduce using rule 62
	'}'            reduce using rule 62
	';'            reduce using rule 62
	integer        reduce using rule 62
	char           reduce using rule 62
	double         reduce using rule 62
	string         reduce using rule 62
	%eof           reduce using rule 62


State 12

	AppLeft -> if . Exp then Exp else Exp               (rule 42)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	fix            shift, and enter state 15
	letrec         shift, and enter state 16
	varid          shift, and enter state 17
	conid          shift, and enter state 18
	symid          shift, and enter state 19
	'('            shift, and enter state 20
	'['            shift, and enter state 21
	integer        shift, and enter state 22
	char           shift, and enter state 23
	double         shift, and enter state 24
	string         shift, and enter state 25

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Exp            goto state 74
	Application    goto state 7
	AppLeft        goto state 8
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11

State 13

	AppLeft -> let . Layout__Binding__ in Exp           (rule 43)

	'{'            shift, and enter state 73

	Layout__Binding__goto state 72

State 14

	AppLeft -> lambda . Params '->' Exp                 (rule 39)

	'->'           reduce using rule 91
	varid          shift, and enter state 17

	Params         goto state 69
	Var            goto state 70
	NoneOrMany__Var__goto state 71

State 15

	AppLeft -> fix . Exp                                (rule 41)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	fix            shift, and enter state 15
	letrec         shift, and enter state 16
	varid          shift, and enter state 17
	conid          shift, and enter state 18
	symid          shift, and enter state 19
	'('            shift, and enter state 20
	'['            shift, and enter state 21
	integer        shift, and enter state 22
	char           shift, and enter state 23
	double         shift, and enter state 24
	string         shift, and enter state 25

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Exp            goto state 68
	Application    goto state 7
	AppLeft        goto state 8
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11

State 16

	AppLeft -> letrec . LowIdent Params '=' Exp in Exp    (rule 44)

	varid          shift, and enter state 17
	'('            shift, and enter state 49

	LowIdent       goto state 67
	Var            goto state 4

State 17

	Var -> varid .                                      (rule 21)

	if             reduce using rule 21
	then           reduce using rule 21
	else           reduce using rule 21
	let            reduce using rule 21
	in             reduce using rule 21
	lambda         reduce using rule 21
	fix            reduce using rule 21
	letrec         reduce using rule 21
	'->'           reduce using rule 21
	'='            reduce using rule 21
	'|'            reduce using rule 21
	'::'           reduce using rule 21
	varid          reduce using rule 21
	conid          reduce using rule 21
	op             reduce using rule 21
	opcon          reduce using rule 21
	symid          reduce using rule 21
	'('            reduce using rule 21
	')'            reduce using rule 21
	'['            reduce using rule 21
	']'            reduce using rule 21
	','            reduce using rule 21
	'`'            reduce using rule 21
	'}'            reduce using rule 21
	';'            reduce using rule 21
	unit           reduce using rule 21
	integer        reduce using rule 21
	char           reduce using rule 21
	double         reduce using rule 21
	string         reduce using rule 21
	rec            reduce using rule 21
	%eof           reduce using rule 21


State 18

	Con -> conid .                                      (rule 22)

	if             reduce using rule 22
	then           reduce using rule 22
	else           reduce using rule 22
	let            reduce using rule 22
	in             reduce using rule 22
	lambda         reduce using rule 22
	fix            reduce using rule 22
	letrec         reduce using rule 22
	'->'           reduce using rule 22
	'='            reduce using rule 22
	'|'            reduce using rule 22
	'::'           reduce using rule 22
	varid          reduce using rule 22
	conid          reduce using rule 22
	op             reduce using rule 22
	opcon          reduce using rule 22
	symid          reduce using rule 22
	'('            reduce using rule 22
	')'            reduce using rule 22
	'['            reduce using rule 22
	']'            reduce using rule 22
	','            reduce using rule 22
	'`'            reduce using rule 22
	'}'            reduce using rule 22
	';'            reduce using rule 22
	unit           reduce using rule 22
	integer        reduce using rule 22
	char           reduce using rule 22
	double         reduce using rule 22
	string         reduce using rule 22
	rec            reduce using rule 22
	%eof           reduce using rule 22


State 19

	AppLeft -> symid .                                  (rule 37)

	if             reduce using rule 37
	then           reduce using rule 37
	else           reduce using rule 37
	let            reduce using rule 37
	in             reduce using rule 37
	lambda         reduce using rule 37
	fix            reduce using rule 37
	letrec         reduce using rule 37
	'::'           reduce using rule 37
	varid          reduce using rule 37
	conid          reduce using rule 37
	op             reduce using rule 37
	opcon          reduce using rule 37
	symid          reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	'['            reduce using rule 37
	']'            reduce using rule 37
	','            reduce using rule 37
	'`'            reduce using rule 37
	'}'            reduce using rule 37
	';'            reduce using rule 37
	integer        reduce using rule 37
	char           reduce using rule 37
	double         reduce using rule 37
	string         reduce using rule 37
	%eof           reduce using rule 37


State 20

	LowIdent -> '(' . Op ')'                            (rule 17)
	Exp -> '(' . Exp ')'                                (rule 29)
	AppLeft -> '(' . opcon ')'                          (rule 36)
	AppLeft -> '(' . AppLeft ')'                        (rule 40)
	AppLeft -> '(' . Exp CommaSeparated__Exp__ ')'      (rule 45)
	AppLeft -> '(' . Application ')'                    (rule 47)
	AppLeft -> '(' . Exp '::' Type ')'                  (rule 48)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	fix            shift, and enter state 15
	letrec         shift, and enter state 16
	varid          shift, and enter state 17
	conid          shift, and enter state 18
	op             shift, and enter state 54
	opcon          shift, and enter state 66
	symid          shift, and enter state 19
	'('            shift, and enter state 20
	'['            shift, and enter state 21
	integer        shift, and enter state 22
	char           shift, and enter state 23
	double         shift, and enter state 24
	string         shift, and enter state 25

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Op             goto state 50
	Exp            goto state 63
	Application    goto state 64
	AppLeft        goto state 65
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11

State 21

	AppLeft -> '[' . NoneOrManySeparated__Exp__ ']'     (rule 46)

	if             shift, and enter state 12
	let            shift, and enter state 13
	lambda         shift, and enter state 14
	fix            shift, and enter state 15
	letrec         shift, and enter state 16
	varid          shift, and enter state 17
	conid          shift, and enter state 18
	symid          shift, and enter state 19
	'('            shift, and enter state 20
	'['            shift, and enter state 21
	']'            reduce using rule 93
	integer        shift, and enter state 22
	char           shift, and enter state 23
	double         shift, and enter state 24
	string         shift, and enter state 25

	LowIdent       goto state 3
	Var            goto state 4
	Con            goto state 5
	Exp            goto state 61
	Application    goto state 7
	AppLeft        goto state 8
	Lit            goto state 9
	Integer        goto state 10
	Double         goto state 11
	NoneOrManySeparated__Exp__goto state 62

State 22

	Integer -> integer .                                (rule 65)

	if             reduce using rule 65
	then           reduce using rule 65
	else           reduce using rule 65
	let            reduce using rule 65
	in             reduce using rule 65
	lambda         reduce using rule 65
	fix            reduce using rule 65
	letrec         reduce using rule 65
	'::'           reduce using rule 65
	varid          reduce using rule 65
	conid          reduce using rule 65
	op             reduce using rule 65
	opcon          reduce using rule 65
	symid          reduce using rule 65
	'('            reduce using rule 65
	')'            reduce using rule 65
	'['            reduce using rule 65
	']'            reduce using rule 65
	','            reduce using rule 65
	'`'            reduce using rule 65
	'}'            reduce using rule 65
	';'            reduce using rule 65
	integer        reduce using rule 65
	char           reduce using rule 65
	double         reduce using rule 65
	string         reduce using rule 65
	%eof           reduce using rule 65


State 23

	Lit -> char .                                       (rule 63)

	if             reduce using rule 63
	then           reduce using rule 63
	else           reduce using rule 63
	let            reduce using rule 63
	in             reduce using rule 63
	lambda         reduce using rule 63
	fix            reduce using rule 63
	letrec         reduce using rule 63
	'::'           reduce using rule 63
	varid          reduce using rule 63
	conid          reduce using rule 63
	op             reduce using rule 63
	opcon          reduce using rule 63
	symid          reduce using rule 63
	'('            reduce using rule 63
	')'            reduce using rule 63
	'['            reduce using rule 63
	']'            reduce using rule 63
	','            reduce using rule 63
	'`'            reduce using rule 63
	'}'            reduce using rule 63
	';'            reduce using rule 63
	integer        reduce using rule 63
	char           reduce using rule 63
	double         reduce using rule 63
	string         reduce using rule 63
	%eof           reduce using rule 63


State 24

	Double -> double .                                  (rule 66)

	if             reduce using rule 66
	then           reduce using rule 66
	else           reduce using rule 66
	let            reduce using rule 66
	in             reduce using rule 66
	lambda         reduce using rule 66
	fix            reduce using rule 66
	letrec         reduce using rule 66
	'::'           reduce using rule 66
	varid          reduce using rule 66
	conid          reduce using rule 66
	op             reduce using rule 66
	opcon          reduce using rule 66
	symid          reduce using rule 66
	'('            reduce using rule 66
	')'            reduce using rule 66
	'['            reduce using rule 66
	']'            reduce using rule 66
	','            reduce using rule 66
	'`'            reduce using rule 66
	'}'            reduce using rule 66
	';'            reduce using rule 66
	integer        reduce using rule 66
	char           reduce using rule 66
	double         reduce using rule 66
	string         reduce using rule 66
	%eof           reduce using rule 66


State 25

	Lit -> string .                                     (rule 64)

	if             reduce using rule 64
	then           reduce using rule 64
	else           reduce using rule 64
	let            reduce using rule 64
	in             reduce using rule 64
	lambda         reduce using rule 64
	fix            reduce using rule 64
	letrec         reduce using rule 64
	'::'           reduce using rule 64
	varid          reduce using rule 64
	conid          reduce using rule 64
	op             reduce using rule 64
	opcon          reduce using rule 64
	symid          reduce using rule 64
	'('            reduce using rule 64
	')'            reduce using rule 64
	'['            reduce using rule 64
	']'            reduce using rule 64
	','            reduce using rule 64
	'`'            reduce using rule 64
	'}'            reduce using rule 64
	';'            reduce using rule 64
	integer        reduce using rule 64
	char           reduce using rule 64
	double         reduce using rule 64
	string         reduce using rule 64
	%eof           reduce using rule 64


State 26

	TyAppLeft -> LowIdent .                             (rule 74)

	'->'           reduce using rule 74
	'|'            reduce using rule 74
	varid          reduce using rule 74
	conid          reduce using rule 74
	opcon          reduce using rule 74
	'('            reduce using rule 74
	')'            reduce using rule 74
	','            reduce using rule 74
	'`'            reduce using rule 74
	'}'            reduce using rule 74
	';'            reduce using rule 74
	unit           reduce using rule 74
	rec            reduce using rule 74
	%eof           reduce using rule 74


State 27

	TyAppLeft -> UpIdent .                              (rule 75)

	'->'           reduce using rule 75
	'|'            reduce using rule 75
	varid          reduce using rule 75
	conid          reduce using rule 75
	opcon          reduce using rule 75
	'('            reduce using rule 75
	')'            reduce using rule 75
	','            reduce using rule 75
	'`'            reduce using rule 75
	'}'            reduce using rule 75
	';'            reduce using rule 75
	unit           reduce using rule 75
	rec            reduce using rule 75
	%eof           reduce using rule 75


State 28

	UpIdent -> Con .                                    (rule 18)

	'->'           reduce using rule 18
	'='            reduce using rule 18
	'|'            reduce using rule 18
	varid          reduce using rule 18
	conid          reduce using rule 18
	opcon          reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	','            reduce using rule 18
	'`'            reduce using rule 18
	'}'            reduce using rule 18
	';'            reduce using rule 18
	unit           reduce using rule 18
	rec            reduce using rule 18
	%eof           reduce using rule 18


State 29

	%start_parserType -> Type .                         (rule 1)
	TyArr -> Type . '->' Type                           (rule 71)

	'->'           shift, and enter state 60
	%eof           accept


State 30

	TyAppLeft -> TyArr .                                (rule 76)

	'->'           reduce using rule 76
	'|'            reduce using rule 76
	varid          reduce using rule 76
	conid          reduce using rule 76
	opcon          reduce using rule 76
	'('            reduce using rule 76
	')'            reduce using rule 76
	','            reduce using rule 76
	'`'            reduce using rule 76
	'}'            reduce using rule 76
	';'            reduce using rule 76
	unit           reduce using rule 76
	rec            reduce using rule 76
	%eof           reduce using rule 76


State 31

	TyAppLeft -> TyTuple .                              (rule 77)
